# todo-list-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
src/modules/input/: get_task_data.rs  input.rs
src/modules/middlewares/: args.rs  db.rs  get_task_data.rs
src/modules/middlewares/crud/: add.rs  delete.rs  read.rs  update.rs
src/modules/output/: display_in_table.rs  main_errors.rs
src/utils/commands/: commands.rs  manual.rs
src/utils/db/: db.rs
src/utils/error/: errors.rs
src/utils/io/: args.rs  input.rs
src/utils/ui/: color_texts.rs  table.rs
src/utils/warnings/: warnings.rs
