[package]
name = "todo"
version = "1.0.0"
authors = ["Abhishek Sriram <68271853+Noobsiecoder@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
sqlite = "0.26.0"
term-table = "1.3.1"